@@ -1,3 +1,10 @@
+2007-12-27  Robert Ancell  <robert.ancell@gmail.com>
+
+	* Fix bugs in SAN move generation (correctly record takes for en passant, show check hints for
+	  castling, don't treat promotion as a take)
+	* Support resigning in saved games
+	* Stop players from moving after the game has completed
+
 2007-12-24  Robert Ancell  <robert.ancell@gmail.com>
 
 	* lib/scene/opengl/opengl.py: Mark animation as complete when pieces are deleted (fixes game
